Update driver template

--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/DriverTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/DriverTemplate.tt
@@ -25,7 +25,7 @@ namespace <#=Namespace#>.Drivers {
 
             if (displayType == "Edit") {
                 return Combined(
-                    ContentShape("Parts_EditView", () => shapeHelper.Parts_CreateView())
+                    ContentShape("Parts_EditView", () => shapeHelper.Parts_EditView())
                     );
             }
             return null;
