update controller template

--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ControllerTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ControllerTemplate.tt
@@ -9,6 +9,7 @@ using Coevery.Localization;
 using <#=Namespace#>.Models;
 
 namespace <#=Namespace#>.Controllers {
+	[Themed]
     public class <#=EntityName#>Controller : Controller , IUpdateModel{
         private readonly ITransactionManager _transactionManager;
 
