--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Datetime.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Datetime.Edit.cshtml
@@ -28,4 +28,6 @@
     @Html.ValidationMessageFor(m => m.Value)
 </div>
 
-@Display(New.BootstrapDatePickerLocalization())
+@using (Script.Foot()) {
+    @Display(New.BootstrapDatePickerLocalization())
+}
