--- a/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
@@ -2,38 +2,37 @@
     Style.Include("bootstrap/bootstrap.min.css");
     Style.Include("bootstrap/bootstrap-responsive.min.css");
     Style.Require("jQueryUI_Coevery");
-    Style.Include("uniform/css/uniform.default.css");
+    
     Style.Include("fonts/icomoon/style.css");
     Style.Include("fonts/fontello/fontello.css");
     Style.Include("fonts/fontello/fontello-ie7.css").UseCondition("IE 7");
     Style.Include("main-style.css");
-    Style.Include("common.css");
-    Style.Include("plugins/select2/select2.css");
-    Style.Include("plugins/bootstrap-select/bootstrap-select.min.css");
-    Style.Include("perfect-scrollbar.css");
 
     Script.Require("jQuery");
     Script.Require("jQueryUI");
-    Script.Require("jQueryMousewheel");
-    Script.Include("uniform/jquery.uniform.js");
-    Script.Include("js/libs/bootstrap.min.js");
+    Script.Include("bootstrap/bootstrap.min.js");
 
-    Script.Include("js/perfect-scrollbar.js");
-    Script.Include("js/template.js");
-    Script.Include("js/dropdown.js");
+    // select2
+    Style.Include("plugins/select2/select2.css");
     Script.Include("plugins/select2/select2.min.js");
+
+    // Perfect-scrollbar
+    Script.Require("jQueryMousewheel");
+    Style.Include("perfect-scrollbar.css");
+    Script.Include("js/perfect-scrollbar.js");
+    
+    // Bootstrap-select
+    Style.Include("plugins/bootstrap-select/bootstrap-select.min.css");
     Script.Include("plugins/bootstrap-select/bootstrap-select.min.js");
 
+    // Bootstrap_Datetimepicker
     Style.Require("Bootstrap_Datetimepicker");
     Script.Require("Bootstrap_Datetimepicker");
+    
     Script.Require("jQueryValidate");
-    Script.Require("underscore");
 
-    Style.Include("layout-base.css");
-    Style.Include("layout-coevery.css");
+    Style.Include("layout.css");
     Style.Include("site.css");
-    Style.Include("dropdowns.css");
-    Style.Include("filter.css");
 
     Script.Include("js/setup.js");
 }
