--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsEditViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsEditViewTemplate.tt
@@ -1,23 +1,37 @@
 ﻿<#@ template debug="false" language="C#" #>
 <#@ parameter type="System.String" name="EntityName" #>
 <#@ parameter type="System.Collections.Generic.IList<Coevery.DeveloperTools.FormDesigner.Models.Section>" name="SectionList" #>
-@using (Html.BeginFormAntiForgeryPost(Url.Action("Edit", "<#=EntityName #>"),
-    FormMethod.Post, new {@class = "form-structure"})) {
+<#@ import namespace="System.Linq" #>
+@{
+    var id = Guid.NewGuid().ToString();
+}
+<div class="row-fluid edit-mode">
+	@using (Html.BeginFormAntiForgeryPost(Url.Action("Edit", "<#=EntityName #>"),
+		FormMethod.Post, new {@class = "form-horizontal", id = id})) {
 <# foreach (var layoutSection in SectionList) { #>
-    <fieldset>
-		<legend><#= layoutSection.SectionTitle #></legend>
+<# var widths = layoutSection.SectionColumnsWidth.Split(':').ToArray(); #>
+		<fieldset>
+			<legend><#= layoutSection.SectionTitle #></legend>
 <# foreach (var row in layoutSection.Rows) { #>
-		<div class="data-row">
+<# int i = 0; #>
+			<div class="data-row clearfix">
 <# foreach (var column in row.Columns) { #>
-			<div class="data-column">
+				<div class="span<#=widths[i++]#>">
 <# if (column.Field != null) { #>
-				@Display.DisplayFieldEditor(part: Model.ContentPart, fieldName: "<#= column.Field.FieldName #>")
+					@Display.DisplayFieldEditor(part: Model.ContentPart, fieldName: "<#= column.Field.FieldName #>")
+<# } #>
+				</div>
 <# } #>
 			</div>
 <# } #>
-		</div>
+		</fieldset>
 <# } #>
-	</fieldset>
-<# } #>
-	<input type="submit" value="@T("Submit")" />
+		<input type="submit" value="@T("Submit")" />
+	}
+</div>
+
+@using (Script.Foot()) {
+    <script>
+        $('#@id').validate();
+    </script>
 }
