--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ListViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ListViewTemplate.tt
@@ -11,37 +11,108 @@
     Style.Require("jqGrid");
     Style.Require("jqGridCustom");
     Script.Require("jqGrid");
+	Script.Require("jqGrid_i18n");
 }
+
+<div class="row-fluid">
+    <button id="btnAdd" class="btn btn-primary" type="button"><i class="icon-plus"></i> Add</button>
+    <button id="btnEdit" class="btn btn-primary" type="button"><i class="icon-edit"></i> Edit</button>
+    <button id="btnDelete" class="btn btn-warning" type="button"><i class="icon-trash"></i> Delete</button>
+    <button id="btnRefresh" class="btn" type="button">Refresh</button>
+</div>
 
 <div class="row-fluid">
     <table id="<#=ViewName.ToLower()#>Grid"></table>
     <section id="<#=ViewName.ToLower()#>GridPager"></section>
 </div>
+@Html.AntiForgeryToken()
 
 @using (Script.Foot()) {
     <script type="text/javascript">
-        jQuery("#<#=ViewName.ToLower()#>Grid").jqGrid({
-            url: '@Href("~/<#=Namespace#>/<#=EntityTypeName#>/GetAll")',
-            datatype: "json",
+		function updateButtonStatus() {
+            var selectedRowIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+            $("#btnEdit").toggle(selectedRowIds.length == 1);
+            $("#btnDelete").toggle(selectedRowIds.length > 0);
+        }
+
+        $.extend(jQuery.jgrid.defaults, {
+            prmNames: {
+                page: 'page',
+                rows: 'pageSize',
+                sort: 'sortBy',
+                order: 'sortOrder'
+            }
+        });
+        $('#<#=ViewName.ToLower()#>Grid').jqGrid({
+            url: '@Href("~/<#=Namespace#>/<#=EntityTypeName#>/List")',
+            datatype: 'json',
+			mtype: 'POST',
+            postData: {
+                __RequestVerificationToken: function () {
+                var magicToken = $("input[name=__RequestVerificationToken]").first();
+                if (!magicToken) { return null; } // no sense in continuing if form POSTS will fail
+                return magicToken.val();
+                }
+            },
             colModel: <#=GetGridColumnJSONString()#>,
             rowNum: 10,
             rowList: [10, 20, 30],
             pager: '#<#=ViewName.ToLower()#>GridPager',
             viewrecords: true,
             height: '100%',
-            pagerpos: "right",
-            recordpos: "left",
+            pagerpos: 'right',
+            recordpos: 'left',
             sortable: true,
             headertitles: true,
             multiselect: true,
             multiboxonly: true,
             autowidth: true,
             jsonReader: {
-                page: "page",
-                total: "totalPages",
-                records: "totalRecords",
+                page: 'page',
+                total: 'totalPages',
+                records: 'totalRecords',
                 repeatitems: false
+            },
+            onSelectRow: function() {
+                updateButtonStatus();
+            },
+            gridComplete: function() {
+                updateButtonStatus();
             }
+        });
+        $('#btnAdd').click(function() {
+            window.location.href = '@Href("~/<#=Namespace#>/<#=EntityTypeName#>/Create")';
+        });
+        $('#btnEdit').click(function() {
+            var selectedRowIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+            if (selectedRowIds.length == 0) return;
+            window.location.href = '@Href("~/<#=Namespace#>/<#=EntityTypeName#>/Edit/")' + selectedRowIds[0];
+        });
+        $('#btnDelete').click(function () {
+            var selectedIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+		    if (selectedIds.length == 0) return;
+		    var magicToken = $("input[name=__RequestVerificationToken]").first();
+		    if (!magicToken) {
+		        return;
+		    } // no sense in continuing if form POSTS will fail
+		    var confirm = window.confirm($.jgrid.del.msg);
+		    if (!confirm) return;
+
+			$.ajax({
+		            url: '@Href("~/<#=Namespace#>/<#=EntityTypeName#>/Delete")',
+		            data: { selectedIds: selectedIds, __RequestVerificationToken: magicToken.val() },
+		            type: "POST",
+		            traditional: true
+		        })
+		        .done(function(response) {
+		            $('#<#=ViewName.ToLower()#>Grid').trigger('reloadGrid');
+		        })
+		        .fail(function(jqXHR, textStatus, errorThrown) {
+		            alert(textStatus);
+		        });
+        });
+        $('#btnRefresh').click(function () {
+            $('#<#=ViewName.ToLower()#>Grid').trigger('reloadGrid');
         });
     </script>
 }
