--- a/src/Coevery.Web/DeveloperTools/Perspectives/Views/EditorTemplates/Parts.ModuleMenuItem.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Perspectives/Views/EditorTemplates/Parts.ModuleMenuItem.Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Core.Common.ViewModels.ModuleMenuItemEditViewModel
+﻿@model Coevery.DeveloperTools.Perspectives.ViewModels.ModuleMenuItemEditViewModel
 
 <section class="data-row control-group">
     <label class="control-label required">@T("Entity")</label>
