--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/EditViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/EditViewTemplate.tt
@@ -1,5 +1,9 @@
-﻿<header id="page-title" class="ng-scope">
-    <h1 class="pull-left">Lead <span>edit the Lead</span></h1>
+﻿@{
+    string displayName = Model.ContentItem.TypeDefinition.DisplayName;
+    string description = string.Format(T("edit the {0}").Text, displayName);
+}
+<header id="page-title" class="ng-scope">
+    <h1 class="pull-left">@displayName <span>@description</span></h1>
 </header>
 <section id="main-content">
     @if (Model.Actions != null) {
