--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ListViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ListViewTemplate.tt
@@ -50,7 +50,7 @@
             postData: {
                 __RequestVerificationToken: function () {
                 var magicToken = $("input[name=__RequestVerificationToken]").first();
-                if (!magicToken) { return null; } // no sense in continuing if form POSTS will fail
+                if (magicToken.length == 0) { return null; } // no sense in continuing if form POSTS will fail
                 return magicToken.val();
                 }
             },
@@ -92,7 +92,7 @@
             var selectedIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
 		    if (selectedIds.length == 0) return;
 		    var magicToken = $("input[name=__RequestVerificationToken]").first();
-		    if (!magicToken) {
+		    if (magicToken.length == 0) {
 		        return;
 		    } // no sense in continuing if form POSTS will fail
 		    var confirm = window.confirm($.jgrid.del.msg);
