--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/List.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/List.cshtml
@@ -15,7 +15,7 @@
                 <button class="btn btn-small" data-ng-click="edit(selectedItems[0])" ng-disabled="selectedItems.length > 1">
                     <i class="icon-edit"></i>&nbsp;Edit
                 </button>
-                <button class="btn btn-small" data-ng-click="publish()" ng-disabled="selectedItems.length > 1">
+                <button class="btn btn-small" data-ng-click="publish()" ng-disabled="selectedItems.length > 1" data-cobusy="'publishEntity'">
                     Publish
                 </button>
                 <button class="btn btn-small" co-delete-button confirm-message="@T("You really want to delete this entity?")" delete-action="delete()">
@@ -26,7 +26,7 @@
     </div>
     <div class="row-fluid" data-ag-grid="gridOptions" data-ag-grid-name="gridList">
     </div>
-
+    @Html.AntiForgeryToken()
 </section>
 
 <script type="text/javascript">
